Fixed navbar collapse with new search bar

--- a/website/_sass/bootstrap/_navbar.scss
+++ b/website/_sass/bootstrap/_navbar.scss
@@ -233,7 +233,7 @@
 .navbar-nav {
   margin: ($navbar-padding-vertical / 2) (-$navbar-padding-horizontal);
 
-  > li > a {
+  > li > a, form {
     padding-top:    10px;
     padding-bottom: 10px;
     line-height: $line-height-computed;
